[package]
authors = ["M@ <robomancer@optimusride.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "With any luck this will cause an STM32F4 based board to drive a few thousand LEDs."
keywords = [
    "arm",
    "cortex-m",
]
license = "MIT OR Apache-2.0"
name = "sign_firmware"
repository = "https://github.com/dunmatt/rusty-lights"
version = "0.2.1"

[dependencies]
cortex-m-rtfm = "0.2.2"
stm32f40x = "0.5.0"

[dependencies.cortex-m]
version = "0.3.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.6"

[dependencies.cortex-m-semihosting]
version = "0.2.0"
[profile.release]
debug = true
lto = true
